crates/platform/src/snapshots/platform__helper__tests__root_port_443.snap
---
source: crates/platform/src/helper.rs
expression: "(inspection, message)"
---
(
    LowPortInspection {
        ports: [
            LowPortState {
                port: 80,
                available: true,
                owners: [],
            },
            LowPortState {
                port: 443,
                available: false,
                owners: [
                    PortOwner {
                        pid: <holder-pid>,
                        command: "tcp-holder",
                    },
                ],
            },
        ],
    },
    "Loopback TCP port 443 is unavailable. TCP listeners reported on this port: tcp-holder (pid <holder-pid>).",
)
